back/src/main/java/com/example/trileucotestapp/error/PersonNotFoundException.java
package com.example.trileucotestapp.error;

public class PersonNotFoundException extends RuntimeException {
    public PersonNotFoundException(String message) {
        super(message);
    }
}
